fixed scope issue with hover over/out handlers. made hover effect more visible.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -110,8 +110,8 @@ sprite-retina ($collapsed-background-map, 'keep')
   }
 
   .cta-hover {
-
-    color: $cta-hover;
+    color: #ffffff;
+    background-color: $cta-hover;
 
   }
 
